syntax = "proto3";

package urlshortener;

option go_package = "../internal/grpc/urlshortener";

service URLShortener {
  rpc Shorten (ShortenRequest) returns (ShortenResponse);
  rpc Resolve (ResolveRequest) returns (ResolveResponse);
}

message ShortenRequest {
  string url = 1;
}

message ShortenResponse {
  string short_url = 1;
}

message ResolveRequest {
  string short_url = 1;
}

message ResolveResponse {
  string original_url = 1;
}
